@@ -19,3 +19,4 @@ repos:
     rev: v1.13.0
     hooks:
       - id: mypy
+        additional_dependencies: [attrs]
