@@ -4,6 +4,9 @@ CHANGES
 3.0a1 (2024-12-27)
 ------------------
 
+- Switch from namedtuple to attrs for implementation of the Affine class and
+  use functools.cached_property(), which absolutely requires Python 3.8+
+  (#111).
 - Source was moved to src/ and Python version support was changed to 3.9+
   (#110).
 
